# koch

./: .bandit.yaml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  conftest.py  db_stack.yaml  playground-Class.ipynb  prediction_service_molex-APS.ipynb  prediction_service_molex-EUR.ipynb  prediction_service_usage_guide.ipynb  pyproject.toml  tryout.py  yoyo.ini
.gitlab/: Build.gitlab-ci.yml  Deploy.gitlab-ci.yml  Test.gitlab-ci.yml  auto-deploy-values.yaml
chart/: CONTRIBUTING.md  Chart.yaml  README.md  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  postgres-instance.yaml  service.yaml  worker-deployment.yaml
chart/test/: go.mod  go.sum  template_test.go
docs/: hands-on_ds.ipynb  prediction_service_usage_guide.ipynb
kong/: kong.yaml
kong/dev/: kong_config.yaml  kong_service.yaml
kong/prod/: kong_config.yaml  kong_service.yaml
kong/qa/: kong_config.yaml  kong_service.yaml
migrations/: 20210205_01_Fssee-fresh-start-for-migrations.sql  20210216_01_2TkwM-add-feature-ranking-columns.sql  20210318_01_dqwJZ-create-indexes-on-ids.sql  20210329_01_4i0kZ-adding-a-new-column-to-the-train-run-config-table-to-keep-track-of-number-of-pods-generated.sql  20210811_01_EiY2G-Update-for-user-run-tracking.sql  20211124_01_l1oLe-add-prediction-steps-to-train-run-config.sql  20211208_01_hRulS-add-job-name-column-to-train-run-model-config.sql  20220110_01_MTN5D-add-feature-mapping-to-train-config.sql  20220113_01_jG8Yp-add-feature-mapping-to-score-config.sql  20220113_01_nSqp4-metrics-columns.sql
prediction/: master_server.py
prediction/app/: prediction_commands.py  prediction_handlers.py  prediction_manager.py
prediction/scripts/: testCurlLocal.sh
prediction/src/: s3_files.py  static.py  ts_base.py  utils.py  validator.py
tests/: conftest.py  test_master_server.py
tests/src/: test_s3_files.py  (+1 more)
(+70 files in other folders)
